# polixy

./: .dockerignore  Cargo.toml  DESIGN.md  README.md  build.rs  crd.yml  default.nix  deny.toml  example.yml  polixy.proto  shell.nix
.github/workflows/: crds.yml  rust.yml
client/: Cargo.toml  Dockerfile  build.rs
client/src/: grpc.rs  http_api.rs  lib.rs  main.rs  watch_ports.rs
controller/: Cargo.toml  Dockerfile  build.rs
controller/core/: Cargo.toml
controller/core/src/: lib.rs
controller/grpc/: Cargo.toml
controller/grpc/src/: lib.rs
controller/k8s/: Cargo.toml
controller/k8s/api/: Cargo.toml
controller/k8s/api/src/: lib.rs
controller/k8s/index/: Cargo.toml
controller/k8s/index/src/: authz.rs  default_allow.rs  lib.rs  lookup.rs  node.rs  pod.rs  server.rs  tests.rs
controller/k8s/index/src/index/: authz.rs  pod.rs
controller/k8s/src/: lib.rs  lookup.rs
controller/k8s/src/index/: authz.rs  default_allow.rs  mod.rs  namespace.rs  node.rs  pod.rs  server.rs  tests.rs
controller/src/: admin.rs  grpc.rs  lib.rs  lookup.rs  main.rs
controller/src/grpc/: mod.rs
controller/src/index/: authz.rs  default_allow.rs  mod.rs  namespace.rs  node.rs  pod.rs  server.rs  tests.rs
controller/src/k8s/: labels.rs  mod.rs
controller/src/k8s/polixy/: authz.rs  server.rs
crds/: authz.yml  server.yml
emojivoto/: emoji.yml  ns.yml  vote-bot.yml  voting.yml  web.yml
grpc/: Cargo.toml  build.rs
grpc/proto/: polixy.proto
grpc/src/: lib.rs
k8s/: client-access.yml  client.yml
k8s/controller/: deploy.yml  kubeconfig.sh  sa.yml
k8s/crds/: authz.yml  server.yml
k8s/emojivoto/: emoji-server.yml  emoji.yml  ns.yml  prom-server.yml  vote-bot.yml  voting-server.yml  voting.yml  web-server.yml  web.yml
k8s/linkerd/: destination.yml  identity.yml  proxy-admin.yml  proxy-injector.yml  sp-validator.yml
proto/: polixy.proto
src/: authz.rs  grpc.rs  index.rs  k8s.rs  labels.rs  lib.rs  main.rs  server.rs  state.rs  watch.rs
src/grpc/: client.rs  mod.rs  server.rs
src/index/: authz.rs  default_allow.rs  mod.rs  namespace.rs  node.rs  pod.rs  server.rs
src/k8s/: mod.rs  watch.rs
src/k8s/polixy/: authz.rs  mod.rs  server.rs
src/v1/: authz.rs  labels.rs  mod.rs  server.rs
