[package]
name = "polixy"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false

[features]
rustfmt = ["tonic-build/rustfmt"]

[dependencies]
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.51.0", default-features = false, features = ["derive", "rustls-tls"] }
kube-runtime = { version = "0.51.0", default-features = false, features = ["rustls-tls"] }
prost = "0.7"
prost-types = "0.7"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.4", default-features = false, features = ["prost", "codegen", "transport"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost", "transport"], default-features = false }
