[package]
name = "polixy-client"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false

[features]
rustfmt = ["polixy-grpc/rustfmt"]

[dependencies]
anyhow = "1"
futures = "0.3"
#indexmap = "1"
ipnet = "2"
polixy-grpc = { path = "../grpc", features = ["client"] }
structopt = "0.3"
tonic = { version = "0.4", default-features = false, features = ["transport"] }
tokio = { version = "1", features = ["rt", "macros", "parking_lot"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.2"
