[package]
name = "polixy-client"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false

[features]
rustfmt = ["linkerd2-proxy-api/rustfmt"]

[dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "runtime"] }
ipnet = "2"
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", branch = "ver/inbound", features = ["inbound", "client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
structopt = "0.3"
tonic = { version = "0.5", default-features = false, features = ["transport"] }
tokio = { version = "1", features = ["rt", "macros", "parking_lot", "signal", "sync"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.2"

[dev-dependencies]
quickcheck = "1"
