[package]
name = "polixy-controller"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false

[features]
rustfmt = ["linkerd2-proxy-api/rustfmt"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
dashmap = "4"
drain = "0.1.0"
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "runtime"] }
ipnet = "2"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.58.1", default-features = false, features = ["client", "derive", "native-tls"] }
kube-runtime = { version = "0.58.1", default-features = false }
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", branch = "ver/inbound", features = ["inbound", "server"] }
parking_lot = "0.11"
polixy-controller-core = { path = "./core" }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "parking_lot", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.5", default-features = false, features = ["transport"] }
tracing = { version = "0.1" }
tracing-subscriber = "0.2"
