[package]
name = "polixy-controller"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
drain = "0.1"
futures = "0.3"
hyper = { version = "0.14", features = ["http1", "http2", "runtime", "server"] }
kube = { version = "0.58.1", default-features = false, features = ["client", "derive", "native-tls"] }
polixy-controller-core = { path = "./core" }
polixy-controller-grpc = { path = "./grpc" }
polixy-controller-k8s-index = { path = "./k8s/index" }
structopt = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "parking_lot", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.2"
