[package]
name = "polixy-grpc"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false

[features]
client = []
server = []
rustfmt = ["tonic-build/rustfmt"]

[dependencies]
anyhow = "1"
futures = "0.3"
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", branch = "ver/network" }
prost = "0.7"
prost-types = "0.7"
tonic = { version = "0.4", default-features = false, features = ["prost", "codegen", "transport"] }
tracing = "0.1"

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost", "transport"], default-features = false }
