[package]
name = "polixy-grpc"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false

[features]
client = []
server = []
rustfmt = ["tonic-build/rustfmt"]

[dependencies]
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", branch = "ver/network" }
prost = "0.7"
prost-types = "0.7"
tonic = { version = "0.4", default-features = false, features = ["prost", "codegen", "transport"] }

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost", "transport"], default-features = false }
