[package]
name = "polixy-controller-k8s"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
dashmap = "4"
futures = "0.3"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.58.1", default-features = false, features = ["client", "derive", "native-tls"] }
kube-runtime = { version = "0.58.1", default-features = false }
polixy-controller-core = { path = "../core" }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing = "0.1"
